--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -62,3 +62,30 @@
   margin-top: 1rem;
   width: 100%;
 }
+/* styles.css */
+.header {
+  background-color: #001529;
+  color: white;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+}
+
+.logo-img {
+  width: 100px;
+  height: auto;
+  margin-right: 10px;
+}
+
+.font-weight-bold {
+  font-weight: bold;
+}
+
+.search-bar {
+  margin-left: auto;
+  margin-right: 20px;
+}
+
+/* Personnalisez d'autres styles selon vos besoins */
